applications/task-tracker-app/base/istio.yaml

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-gateway
spec:
  selector:
    istio: ingressgateway # This is the selector for the istio ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: task-tracker-app-virtualservice
spec:
  hosts:
  - '*'
  gateways:
  - default-gateway
  http:
  - match:
    - uri:
        prefix: /task-tracker-app-ui
    route:
    - destination:
        host: task-tracker-app-ui.default.svc.cluster.local # virtual service must be in the same namespace as service or explicitly specify namespace
        port:
          number: 9080
